# nepi_system

./: CMakeLists.txt  README.md  package.xml  setup.py
etc/ai_detector_mgr/: ai_detector_mgr.yaml  ai_detector_mgr.yaml.num_factory
etc/apps_mgr/: apps_mgr.yaml  apps_mgr.yaml.num_factory
etc/automation_mgr/: automation_mgr.yaml
etc/drivers_mgr/: drivers_mgr.yaml  drivers_mgr.yaml.num_factory
etc/gpsd_ros_client/: gpsd_ros_client.yaml  gpsd_ros_client.yaml.num_factory
etc/nav_pose_mgr/: nav_pose_mgr.yaml  nav_pose_mgr.yaml.num_factory
etc/network_mgr/: network_mgr.yaml  network_mgr.yaml.num_factory
etc/onvif_mgr/: onvif_mgr.yaml  onvif_mgr.yaml.num_factory
etc/rui_config_mgr/: rui_config_mgr.yaml  rui_config_mgr.yaml.num_factory
etc/system_mgr/: s2x_orin_nx_nepi_partition_layout.yaml  s2x_xavier_nx_nepi_partition_layout.yaml  system_mgr.yaml  system_mgr.yaml.num_factory
etc/time_sync_mgr/: time_sync_mgr.yaml  time_sync_mgr.yaml.num_factory
include/: nav_pose_mgr.h
scripts/: ai_detector_mgr.py  apps_mgr.py  automation_mgr.py  config_mgr.py  drivers_mgr.py  nepi_autolauncher.py  network_mgr.py  onvif_mgr.py  rui_config_mgr.py  system_mgr.py  time_sync_mgr.py
src/: nav_pose_mgr.cpp
src/nepi_managers/: __init__.py
